--- a/CSS/Estilo.css
+++ b/CSS/Estilo.css
@@ -1,5 +1,21 @@
 body{
-    color: darkmagenta;
+    color: rgba(54, 0, 0, 0.959);
     text-align: center;
     font-family: "Arial";
+    font-size: 16px;
+    margin: 0;
+    padding: 0;
+}
+
+#container{
+    width: 70%;
+    padding: 1em;
+    text-align: left;
+    border: 1px solid rgb(0, 38, 255);
+    margin: 0 auto;
+}
+
+#container h1{
+    text-align: center;
+    font-size: 20px;
 }
