--- a/CSS/Estilo.css
+++ b/CSS/Estilo.css
@@ -7,6 +7,22 @@ body{
     padding: 0;
 }
 
+#cabecera
+{
+    background: darkorchid;
+    box-shadow: 0px 5px 20px 0px rgba(0, 0, 0, 0.75);
+    color: azure;
+    font-weight: bold;
+    margin: 0;
+    padding: 0.5em;
+}
+
+#cabecera #tagline{
+    padding: 0 0 0 1em;
+    font-weight: normal;
+    font-size: 0.5cm;
+}
+
 #container{
     width: 70%;
     padding: 1em;
