--- a/CSS/Estilo.css
+++ b/CSS/Estilo.css
@@ -1,7 +1,7 @@
 body{
     color: rgba(54, 0, 0, 0.959);
     text-align: center;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     font-size: 16px;
     margin: 0;
     padding: 0;
