--- a/CSS/Estilo.css
+++ b/CSS/Estilo.css
@@ -1,5 +1,5 @@
 body{
-    color: rgba(54, 0, 0, 0.959);
+    color: chartreuse;
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 16px;
