--- a/CSS/Estilo.css
+++ b/CSS/Estilo.css
@@ -35,3 +35,10 @@ body{
     text-align: center;
     font-size: 20px;
 }
+
+#footer{
+    background: #777;
+    color: white;
+    text-align: center;
+    padding: 0.2cm;
+}
