--- a/CSS/Estilo.css
+++ b/CSS/Estilo.css
@@ -48,7 +48,7 @@ body{
 }
 
 #footer{
-    background: #777;
+    background: darkorchid;
     color: white;
     text-align: center;
     padding: 0.2cm;
